# server-system-monitor

./: .editorconfig  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: dev.md  testing.md
server/: Dockerfile
server_system_monitor/: server_client_monitor.py
tests/: test_server_client_monitor.py
