
[project]

name = 'server_system_monitor'

readme = "README.md"

keywords = ["monitor", "system", "server","remote"]

authors = [
  { name = "FaboBorgesLima", email = "fabo.borges.lima@gmail.com" },
]

maintainers = [
  { name = "FaboBorgesLima", email = "fabo.borges.lima@gmail.com" },
]

dependencies = ["paramiko"]

version = '0.1.0'

description = 'A server system monitor for linux to linux'

[project.optional-dependencies]

dev = ["check-manifest"]
test = ["coverage"]

[tool.setuptools.packages.find]

where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["server_system_monitor"]  # package names should match these glob patterns (["*"] by default)
exclude = ["server"]  